--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -21,5 +21,5 @@ sphinx:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-#   install:
-#   - requirements: doc/requirements.txt
+   install:
+   - requirements: doc/requirements.txt
